# appleseed-maya

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt  Tasks.todo  appleseedRenderer.xml
cmake/Modules/: FindAppleseed.cmake  FindImath.cmake  FindMaya.cmake  FindOSL.cmake  FindOpenImageIO.cmake  FindXGen.cmake
deploy/: appleseed-maya.package.configuration.sample.xml  appleseed-maya.package.py  appleseed.maya.package.configuration.sample.xml  appleseed.maya.package.py  deploy.py
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  latex_index.rst
docs/source/about/: about.rst
docs/source/bibliography/: bibliography.rst
docs/source/bibtex/: references.bib
docs/source/features/: features.rst  limitations.rst  nodes_2dtextures.rst  nodes_3dtextures.rst  nodes_displacement.rst  nodes_envtextures.rst  nodes_imageplanes.rst  nodes_lights.rst  nodes_lookdevkit.rst  nodes_othertextures.rst  nodes_surface.rst  nodes_utilities.rst  nodes_volumetric.rst  supported_nodes.rst
docs/source/installation/: installation.rst
docs/source/shaders/: asColorTransform.rst  asDisneyMaterial.rst  asGlass.rst  asLuminance.rst  asProjection.rst  asVoronoi2D.rst  asVoronoi3D.rst  as_color_transform.rst  as_disney_material.rst  as_glass.rst  as_luminance.rst  as_projection.rst  as_voronoi2d.rst  as_voronoi3d.rst  shaders.rst
docs/source/tutorials/: tutorial1.rst  tutorial2.rst  tutorial3.rst  tutorial_1.rst  tutorial_3.rst  tutorial_3rd_party_applications.rst  tutorial_as_color_transform.rst  tutorials.rst
docs/source/workflow/: workflow.rst
icons/: appleseed-logo.xpm
package/: .gitignore  appleseed-maya.package.configuration.sample.xml  appleseed-maya.package.py  run-appleseed-maya-package.bat
presets/attrPresets/asDisney/: VioletPlastic.mel
presets/attrPresets/asMetal/: Aluminium.mel  Brass.mel  Chromium.mel  Copper.mel  Gold.mel  Iron.mel  Lead.mel  Mercury.mel  Nickel.mel  Osmium.mel  Platinum.mel  PurplePlague.mel  Silver.mel  Titanium.mel  TitaniumNitride.mel  Tungsten.mel  Zinc.mel
presets/attrPresets/asNoise2D/: Coral.mel  CorrosionSoft.mel  Granitical.mel  MetalAging.mel  Ridged.mel  Turbulence.mel  VLRidged.mel  VLTurbulence.mel  VLfBm.mel  Viral.mel  Weave.mel  ZebraNoise.mel  fBm.mel
presets/attrPresets/asNoise3D/: Coral.mel  CorrosionSoft.mel  Granitical.mel  MetalAging.mel  Ridged.mel  Turbulence.mel  VLRidged.mel  VLTurbulence.mel  VLfBm.mel  Viral.mel  Weave.mel  ZebraNoise.mel  fBm.mel
renderDesc/: appleseedRenderer.xml
resources/: appleseedRenderer.xml
sandbox/: as_disney.osl  as_glass.osl  as_plastic.osl  as_shading_input.osl  as_shading_map_sample.osl  shadingnetworkexporter.cpp  shadingnetworkexporter.h
scripts/: AEappleseedBumpControl.mel
scripts/appleseedMaya/: AEappleseedBumpControl.mel  callbacks.py  extensionAttributes.py  hyperShadeCallbacks.py  hypershadeCallbacks.py  logger.py  menu.py  register.py  renderGlobals.py  renderer.py  translator.py  util.py  xgenseed.py  xgenseedui.py  xgenseedutil.py
scripts/appleseedMaya/AETemplates/: NEasAnisotropyVectorFieldTemplate.xml  NEasAscCdlTemplate.xml  NEasAttributesTemplate.xml  NEasBlackbodyTemplate.xml  NEasBlendColorTemplate.xml  NEasBlendNormalsTemplate.xml  NEasBlendShaderTemplate.xml  NEasBumpTemplate.xml  NEasCompositeColorTemplate.xml  NEasCreateMaskTemplate.xml  NEasDoubleShadeTemplate.xml  NEasFalloffAngleTemplate.xml  NEasFresnelTemplate.xml  NEasGlassTemplate.xml  NEasGlobalsTemplate.xml  NEasIdManifoldTemplate.xml  __init__.py  (+23 more)
scripts/appleseed_maya/: callbacks.py  globals.py  register.py  renderer.py  renderglobals.py
shaders/: README.txt  as_alSurface.osl  as_al_surface.osl  as_disney.osl  as_maya_bulge.osl  as_maya_lambert.osl  as_proctex.osl
src/: CMakeLists.txt
src/appleseed-maya/: appleseedsession.cpp  envlightnode.cpp  envlightnode.h  hypershaderenderer.cpp  hypershaderenderer.h  pluginmain.cpp  rendercommands.cpp  renderglobalsnode.cpp  renderglobalsnode.h  shadingnoderegistry.cpp  status.h  swatchrenderer.cpp  swatchrenderer.h  typeids.h
src/appleseedmaya/: CMakeLists.txt  _beginmayaheaders.h  _endmayaheaders.h  alphamapnode.cpp  alphamapnode.h  appleseedsession.cpp  appleseedsession.h  appleseedtranslator.cpp  appleseedtranslator.h  attributeutils.cpp  attributeutils.h  config.h  envlightdraw.cpp  envlightdraw.h  envlightnode.cpp  envlightnode.h  exceptions.cpp  exceptions.h  extensionAttributes.cpp  extensionAttributes.h  extensionattributes.cpp  extensionattributes.h  hypershaderenderer.cpp  hypershaderenderer.h  idlejobqueue.cpp  idlejobqueue.h  image.cpp  image.h  imageutils.cpp  imageutils.h  logger.cpp  logger.h  murmurhash.cpp  murmurhash.h  physicalskylightnode.cpp  physicalskylightnode.h  pluginmain.cpp  python.cpp  python.h  pythonbridge.cpp  (+25 more)
src/appleseedmaya/exporters/: alphamapexporter.cpp  alphamapexporter.h  alphamapexporterfwd.h  arealightexporter.cpp  arealightexporter.h  cameraexporter.cpp  cameraexporter.h  dagnodeexporter.cpp  dagnodeexporter.h  dagnodeexporterfwd.h  envlightexporter.cpp  envlightexporter.h  exporter.h  exporterfactory.cpp  exporterfactory.h  fileexporter.cpp  fileexporter.h  instanceexporter.cpp  instanceexporter.h  lightexporter.cpp  lightexporter.h  mandelbrotexporter.cpp  mandelbrotexporter.h  meshexporter.cpp  meshexporter.h  mpxnodeexporter.cpp  mpxnodeexporter.h  place3dtextureexporter.cpp  place3dtextureexporter.h  rampexporter.cpp  rampexporter.h  remapcolorexporter.cpp  remapcolorexporter.h  remaphsvexporter.cpp  remaphsvexporter.h  remapvalueexporter.cpp  remapvalueexporter.h  shadingengineexporter.cpp  shadingengineexporter.h  shadingengineexporterfwd.h  (+10 more)
src/appleseedmaya/nodeexporters/: dagnodeexporter.cpp  dagnodeexporter.h  meshexporter.cpp  meshexporter.h  nodeexporter.cpp  nodeexporter.h  nodeexporterfactory.cpp  nodeexporterfactory.h
src/xgenseed/: CMakeLists.txt  xgenproceduralassembly.cpp
test/: .gitignore  area_light_uvs.ma  workspace.mel
test/scenes/: area_light_uvs.ma  batch_render.ma  face_materials.ma  mesh_export.ma  scene_scale.ma
(+52 files in other folders)
